--- a/android_view/app/src/main/res/values/themes.xml
+++ b/android_view/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <style name="Theme.MediaPlayer" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">#fdf6e3</item>
+        <item name="android:statusBarColor">#fdf6e3</item>
+        <item name="android:navigationBarColor">#fdf6e3</item>
     </style>
 </resources>
+
